--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ userAccount.alreadyActivated=Your account has been already activated, please pro
 userAccount.notFound=Customer you are looking for is not found, if the problem persist please reach to the customer service for assistance
 userAccount.emailAddressVerified=Your email address has been verified, please verify the mobile number with the otp code send to activate your account
 userAccount.emailVerificationCodeMisMatch=Your email address verification has been failed, please click on the email verification link provided to you aspart of the email. If you believe something went wrong please reach to customer service for assistance
+userAccount.mobilePendingForActivation=Please complete the mobile verification for Activating your account.
